// The MIT License
//
// Copyright (c) 2020 Temporal Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package temporal.server.api.replication.v1;

option go_package = "go.temporal.io/server/api/replication/v1;repication";

import "google/protobuf/timestamp.proto";

import "temporal/server/api/enums/v1/replication.proto";
import "temporal/server/api/enums/v1/task.proto";
import "temporal/server/api/history/v1/message.proto";
import "temporal/server/api/persistence/v1/workflow_mutable_state.proto";
import "temporal/server/api/persistence/v1/task_queues.proto";

import "temporal/api/common/v1/message.proto";
import "temporal/api/namespace/v1/message.proto";
import "temporal/api/replication/v1/message.proto";
import "temporal/api/failure/v1/message.proto";
import "temporal/server/api/workflow/v1/message.proto";

message ReplicationTask {
    temporal.server.api.enums.v1.ReplicationTaskType task_type = 1;
    int64 source_task_id = 2;
    reserved 4;
    reserved 7;
    oneof attributes {
        NamespaceTaskAttributes namespace_task_attributes = 3;
        SyncShardStatusTaskAttributes sync_shard_status_task_attributes = 5;
        SyncActivityTaskAttributes sync_activity_task_attributes = 6;
        HistoryTaskAttributes history_task_attributes = 8;
        SyncWorkflowStateTaskAttributes sync_workflow_state_task_attributes = 10;
        TaskQueueUserDataAttributes task_queue_user_data_attributes = 11;
    }
    // All attributes should be deprecated and replaced by this field.
    // The task_type + data provide more flexibility in future use cases.
    temporal.api.common.v1.DataBlob data = 12;
    google.protobuf.Timestamp visibility_time = 9;
}

message ReplicationToken {
    int32 shard_id = 1;
    // lastRetrievedMessageId is where the next fetch should begin with.
    int64 last_retrieved_message_id = 2;
    // lastProcessedMessageId is the last messageId that is processed on the passive side.
    // This can be different than lastRetrievedMessageId if passive side supports prefetching messages.
    int64 last_processed_message_id = 3;
    // The VisibilityTime of last processed ReplicationTask
    google.protobuf.Timestamp last_processed_visibility_time = 4;
}

message SyncShardStatus {
    google.protobuf.Timestamp status_time = 1;
}

message SyncReplicationState {
    int64 inclusive_low_watermark = 1;
    google.protobuf.Timestamp  inclusive_low_watermark_time = 2;
}

message ReplicationMessages {
    repeated ReplicationTask replication_tasks = 1;
    // This can be different than the last taskId in the above list, because sender can decide to skip tasks (e.g. for completed workflows).
    int64 last_retrieved_message_id = 2;
    // Hint for flow control.
    bool has_more  = 3;
    SyncShardStatus sync_shard_status = 4;
}

message WorkflowReplicationMessages {
    repeated ReplicationTask replication_tasks = 1;
    // This can be different than the last taskId in the above list, because sender can decide to skip tasks (e.g. for completed workflows).
    int64 exclusive_high_watermark = 2;
    google.protobuf.Timestamp  exclusive_high_watermark_time = 3;
}

message ReplicationTaskInfo {
    string namespace_id = 1;
    string workflow_id = 2;
    string run_id = 3;
    temporal.server.api.enums.v1.TaskType task_type = 4;
    int64 task_id = 5;
    int64 version = 6;
    int64 first_event_id = 7;
    int64 next_event_id = 8;
    int64 scheduled_event_id = 9;
}

message NamespaceTaskAttributes {
    temporal.server.api.enums.v1.NamespaceOperation namespace_operation = 1;
    string id = 2;
    temporal.api.namespace.v1.NamespaceInfo info = 3;
    temporal.api.namespace.v1.NamespaceConfig config = 4;
    temporal.api.replication.v1.NamespaceReplicationConfig replication_config = 5;
    int64 config_version = 6;
    int64 failover_version = 7;
    repeated temporal.api.replication.v1.FailoverStatus failover_history = 8;
}

message SyncShardStatusTaskAttributes {
    string source_cluster = 1;
    int32 shard_id = 2;
    google.protobuf.Timestamp status_time = 3;
}

message SyncActivityTaskAttributes {
    string namespace_id = 1;
    string workflow_id = 2;
    string run_id = 3;
    int64 version = 4;
    int64 scheduled_event_id = 5;
    google.protobuf.Timestamp scheduled_time = 6;
    int64 started_event_id = 7;
    google.protobuf.Timestamp started_time = 8;
    google.protobuf.Timestamp last_heartbeat_time = 9;
    temporal.api.common.v1.Payloads details = 10;
    int32 attempt = 11;
    temporal.api.failure.v1.Failure last_failure = 12;
    string last_worker_identity = 13;
    temporal.server.api.history.v1.VersionHistory version_history = 14;
    temporal.server.api.workflow.v1.BaseExecutionInfo base_execution_info = 15;
}

message HistoryTaskAttributes {
    reserved 1;
    string namespace_id = 2;
    string workflow_id = 3;
    string run_id = 4;
    repeated temporal.server.api.history.v1.VersionHistoryItem version_history_items = 5;
    temporal.api.common.v1.DataBlob events = 6;
    // New run events does not need version history since there is no prior events.
    temporal.api.common.v1.DataBlob new_run_events = 7;
    temporal.server.api.workflow.v1.BaseExecutionInfo base_execution_info = 8;

}

message SyncWorkflowStateTaskAttributes {
    temporal.server.api.persistence.v1.WorkflowMutableState workflow_state = 1;
}

message TaskQueueUserDataAttributes {
    string namespace_id = 1;
    string task_queue_name = 2;
    temporal.server.api.persistence.v1.TaskQueueUserData user_data = 3;
}
